objects/SMAX_PS_ProductSales__c.object
<CustomObject>
    <label>Product Sales</label>
    <nameField>
        <displayFormat>PSLS-{00000000}</displayFormat>
        <label>Product Sales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SMAX_PS_Active__c</fullName>
        <formula>SMAX_PS_Product__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Sales</relationshipLabel>
        <relationshipName>Product_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SalesOrg__c</fullName>
        <label>Sales Org</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SalesUnit__c</fullName>
        <label>Sales Unit</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastTxnNum__c</fullName>
        <label>Last Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PartNumber__c</fullName>
        <externalId>true</externalId>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Unit_Price__c</fullName>
        <description>The default Unit Price of the Product in this Sales Org.  For use in Off-line Pricing.</description>
        <inlineHelpText>The default Unit Price of the Product in this Sales Org.  For use in Off-line Pricing.</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Part_Number__c</fullName>
        <description>Displays the Part Number from the Product object</description>
        <formula>SMAX_PS_Product__r.Partnum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Part Number from the Product object</inlineHelpText>
        <label>Part Number (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ProductType__c</fullName>
        <externalId>true</externalId>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_My_Sales_Org__c</fullName>
        <formula>IF($User.SMAX_PS_Sales_Org__c==SMAX_PS_SalesOrg__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Sales Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Name__c</fullName>
        <description>denotes name of product - used in sfm display</description>
        <formula>SMAX_PS_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>denotes name of product - used in sfm display</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Type__c</fullName>
        <description>This custom formula field pulls the Product Type to the Product Sales page</description>
        <formula>TEXT(SMAX_PS_Product__r.SVMXC__Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This custom formula field pulls the Product Type to the Product Sales page</inlineHelpText>
        <label>Product Type (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MaterialGroup1__c</fullName>
        <label>Material Group1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MaterialGroup2__c</fullName>
        <label>Material Group2</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MaterialGroup3__c</fullName>
        <label>Material Group3</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_DeliveringPlant__c</fullName>
        <label>Delivering Plant</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PartDescription__c</fullName>
        <label>Part Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Sales_Unit_Code__c</fullName>
        <description>Used for Boomi and SAP integration only.</description>
        <inlineHelpText>Used for Boomi and SAP integration only.</inlineHelpText>
        <label>Sales Unit Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Part_Description__c</fullName>
        <description>Displays the Product Description from the Product object</description>
        <formula>SMAX_PS_Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Product Description from the Product object</inlineHelpText>
        <label>Part Description (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ProductHierarchy__c</fullName>
        <label>Product Hierarchy</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_ActivityType__c</fullName>
        <label>SAP Activity Type</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ItemCategoryGroup__c</fullName>
        <label>Item Category Group</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_Activity_Type__c</fullName>
        <description>Displays the SAP number from the Product record</description>
        <formula>SMAX_PS_Product__r.SMAX_PS_ActivityType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the SAP number from the Product record</inlineHelpText>
        <label>SAP Activity Type (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_AccountAssignGroup__c</fullName>
        <label>Account Assign Group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_DistributionChannel__c</fullName>
        <label>Distribution Channel</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IdForProductAttribute1__c</fullName>
        <label>Id For Product Attribute1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IdForProductAttribute2__c</fullName>
        <label>Id For Product Attribute2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IdForProductAttribute4__c</fullName>
        <label>Id For Product Attribute4</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MaterialStatusValidFrom__c</fullName>
        <label>Material Status Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_DistributionChainMaterialStatus__c</fullName>
        <label>DistributionChainSpecificMaterialStatus</label>
        <length>2</length>
        <type>Text</type>
    </fields>
</CustomObject>